--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </div>
   
   <script>
-    const NOTION_API_TOKEN = 'your-secret-token';
-    const DATABASE_ID = 'your-notion-database-id';
+    const NOTION_API_TOKEN = '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';
+    const DATABASE_ID = '23e78abfd47880d39f15c9bcb6a36823';
     
     async function fetchUser() {
       const userId = document.getElementById('userID').value;
