--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       });
 
       const data = await response.json();
+      console.log(data);
 
       if (data.results && data.results.length > 0) {
         currentUser = data.results[0];
